prevent empty 'waterchain agg' card from showing; align the smaller icons

--- a/app/styles/_omnibox.scss
+++ b/app/styles/_omnibox.scss
@@ -625,8 +625,11 @@
   left: 5px;
 }
 
-.small-structure-icon {
+.small-icon-holder {
   font-size: 10px;
+  position: relative;
+  top: -2px;
+  left: 5px;
 }
 
 .relatified-events-header:hover {
